change how roles are marshalled; fix up last items from the conversion

--- a/WebTools/src/i18n/locales/de/translations.json
+++ b/WebTools/src/i18n/locales/de/translations.json
@@ -123,6 +123,12 @@
     "CharacterTypePage.whatMilitary": "Welches Militär repräsentiert dieser Charakter?",
     "CharacterTypePage.otherMilitaryName": "Wie lautet der Name dieses Militärs?",
 
+    "EducationPage.type.starfleet": "Sternenflottenakademie",
+    "EducationPage.type.klingonWarrior": "Klingonische Verteidigungsstreitmacht",
+    "EducationPage.type.civilian": "Zivile Berufsausbildung",
+    "EducationPage.type.alliedMilitary": "Militärische Ausbildung",
+    "EducationPage.type.ambassadorDiplomat": "Diplomatische Ausbildung",
+
     "EnvironmentPage.showAlt": "Alternative Herkunft erlauben (SL-Entscheidung)",
 
     "EnvironmentPage.button.selectEnvironment": "Herkunft wählen",
