Per #175, unless there's a service year on a simple starthip, certain talents don't show up; minor tweaks for viewing solo characters

--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -82,6 +82,7 @@
     "ViewPage.viewSupportingCharacter": "View Supporting Character",
     "ViewPage.viewNpc": "View NPC",
     "ViewPage.viewMainCharacter": "View Main Character",
+    "ViewPage.viewSoloCharacter": "View Solo Character",
     "ViewPage.viewStarship": "View Starship",
     "ViewPage.errorMessage": "Things have gone terribly, terribly wrong. We might be in the mirror universe.",
     "ViewPage.unnamedStarship": "Unnamed Starship",
@@ -357,6 +358,7 @@
     "Construct.other.determination": "Determination",
     "Construct.other.discipline": "Discipline",
     "Construct.other.disciplines": "Disciplines",
+    "Construct.other.education": "Education",
     "Construct.other.environment": "Environment",
     "Construct.other.equipment": "Equipment",
     "Construct.other.era": "Era",
@@ -434,6 +436,7 @@
     "Page.title.environment": "Environment",
     "Page.title.environmentDetails": "Environment Details",
     "Page.title.era": "Era",
+    "Page.title.extraTalentDetails": "Extra Details",
     "Page.title.finalStarshipDetails": "Final Starship Details",
     "Page.title.finish": "Finishing Touches",
     "Page.title.gamemasterTrackerPage": "Tracking",
